<resources>
    <string name="map_keybavariyatest">
AIzaSyAqWwxGWSOJdlSmCWZ9CHe6evHOLKv98YA </string>
    <string name="app_name">Bavaria Group</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="crash_toast_text">Hi</string>
    <string name="about_us1">Bavaria Group is the first and original Real Estate company selling and managing apartments in exclusive residential areas in Kuwait.</string>
    <string name="about_us2">Bavaria Group Real Estate has been in the business for over 8 years and is well known in the real estate industry for housing employees of many large western companies in Kuwait. Bavaria Group Real Estate\'s name has been established through the continued trust of our clients who have been with us since 2005. Our commitment is to give our customers an unmatched level of service.</string>
    <string name="title_aboutus">Bavaria Group</string>
    <string name="share_build">Build your own app without Programing on \n www.appmachine.com</string>
    <string name="prompt">Make your selection... </string>

    <string name="facebook_app_id">1340644245951141</string>
    <string name="sharelocation">Share Location</string>

    <string name="login_detail">
        The registration process is easy. Enter your Civil ID number/mobile number. /n
        Bavaria will send you a one-time temporary password on the number. You will
        need to enter the temporary password to log into your account for the first tome
    </string>

    <string name="office_time">Our office hours are saturday to thursday:\n 9am - 5pm. Saturday 9am - 1pm</string>

    <string name="myticketdetails"> Submit and track any enquiries with us here...</string>
    <string name="detail"> Please fill out the form below and\nwe will get back to you as soon as\npossible</string>

    <string name="pinning_ads">What is the process of pinning the ads?</string>
    <string name="faqviewQue">What is the process of pinning the ads? </string>
    <string name="faqviewAnsDetails">It is an additional optional feature you can make your
    ad one of the five first advertisement for 24 hours and will have a distinctive red
    tape different than the rest of the ads.</string>

    <string name="payonlineinstuction">Please enter registered
        civil id/Phone Number to pay your dues....!</string>

    <!-- Login screen -->

    <string name="civil_id">civil id</string>
    <string name="Password">Password</string>
    <string name="Remember_me">Remember me</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Forgot_Your_Password">Forgot Your Password?</string>
    <string name="back">Back</string>

    <string name="name">Name</string>
    <string name="phoneno">Phone No.</string>
    <string name="email_id">Email ID</string>
    <string name="civil_idd">Civil ID</string>
    <string name="amounttopay">Amount to Pay</string>

    <!-- Main screen -->
    <string name="projects">Projects</string>
    <string name="pay_online">Pay Online</string>
    <string name="my_account">My Account</string>
    <string name="maintenance">Maintenance</string>
    <string name="photo_video">Photo Video</string>
    <string name="about_us">About US</string>
    <string name="settings">Settings</string>
    <string name="information">Information</string>

    <!-- acoount faq screen -->
    <string name="pinningads">Pinning Ads</string>
    <string name="faq_s">Faq\'s</string>

    <!-- acoount myticket screen -->
    <string name="my_tickets">My Tickets</string>
    <string name="my_support_tickets">My Support Tickets</string>
    <string name="search">Search</string>
    <string name="enter_ticket_or_subject">Enter Ticket # or Subject</string>

    <!-- acoount reply screen -->
    <string name="reply">Reply</string>
    <string name="ticket_no_14">Ticket No #14</string>
    <string name="subject">Subject</string>
    <string name="department">Department</string>
    <string name="submitted">Submitted</string>
    <string name="ticket_status">Ticket Status:</string>
    <string name="priority">Priority</string>
    <string name="message">Message</string>
    <string name="support">Support</string>
    <string name="_14_7_2017">14/7/2017</string>
    <string name="open">Open</string>
    <string name="high">High</string>

    <!-- change password screen -->
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update">Update</string>

    <!-- Chat screen -->
    <string name="chat_with_us">Chat with us</string>

    <!-- contact us screen -->
    <string name="live_chat">Live Chat</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="support_bavariyagroup_net">support@bavariyagroup.net</string>
    <string name="www_bavariyagroup_net">www.bavariagroup.net</string>

    <string name="installment">Other Payments</string>

    <!-- my account screen -->
    <string name="user_name">User name</string>
    <string name="yearly_membership">Yearly Maintenance</string>
    <string name="water_bill">Water Bill</string>
    <string name="payment_history">Payment History</string>

    <!-- open ticket screen -->
    <string name="open_ticket">Open Ticket</string>
    <string name="please_select_your_flat">Please Select your flat!</string>
    <string name="submit">Submit</string>
    <string name="payasguest">Pay as Guest</string>
    <string name="guestinfo">If you not register user click Below...!</string>

    <!-- payment confirm screen -->
    <string name="payment_confirm">Payment Confirm</string>
    <string name="project">Project </string>
    <string name="sedra">Sedra</string>
    <string name="building">Building </string>
    <string name="floor">Floor </string>
    <string name="flat">Flat </string>
    <string name="civilid">Civil Id :</string>
    <string name="amount_to_pay">Amount to pay</string>
    <string name="_1000_kwd">1000 KWD</string>
    <string name="confirm">Confirm</string>
    <string name="please_confirm_your_payment">Please Confirm Your Payment</string>
    <string name="a">A</string>

    <!-- payment online screen -->
    <string name="total_amount_kd">Total Amount(KD)</string>
    <string name="payment_towards">Payment towards</string>
    <string name="pay_now">Pay Now</string>
    <string name="paymenttype">Payment Type</string>

    <string name="enter_civil_id_phone_number">Enter Civil ID/Phone Number</string>

    <string name="photos">Photos</string>
    <string name="catalogues">Catalogues</string>
    <string name="video">Video</string>

    <string name="title">Title</string>
    <string name="pics">Pics</string>
    <string name="check_availability">Check Availability</string>
    <string name="share_location">Share Location</string>
    <string name="please_enter_civil_id">Please Enter Civil id</string>
    <string name="phone_number">Phone Number</string>
    <string name="please_enter_phone_number">Please enter phone number</string>
    <string name="register">Register</string>

    <string name="build_with_appmachine">Build With AppMachine</string>
    <string name="share_via_twitter">Share via Twitter</string>
    <string name="share_via_facebook">Share via Facebook</string>
    <string name="rate_via_playstore">Rate via Playstore</string>
    <string name="mail_in_link">Mail in link</string>

    <string name="my_ticket">My Ticket</string>
    <string name="call_us">Call Us</string>
    <string name="profile">Profile</string>

    <string name="pro_name">pro_name</string>
    <string name="desc">desc</string>
    <string name="membership">Maintenance</string>
    <string name="address">Address</string>
    <string name="bavaria_group">Bavaria Group</string>
    <string name="_25_february_tower_20th_floor_khalid_bin_waleed_st_kuwait">25 February Tower,20th Floor , khalid Bin Waleed St. Kuwait</string>
    <string name="amount">Amount</string>

    <string name="loading">Loading...</string>
    <string name="login_via_facebook">Login via Facebook</string>
    <string name="login_via_twitter">Login via Twitter</string>
    <string name="login_via_linkedin">Login via LinkedIn</string>
    <string name="login_via_googleplus">Login via GooglePlus</string>
    <string name="view_reply">View/Reply</string>
    <string name="al_sedra">Al Sedra</string>
    <string name="block_a">Block A</string>
    <string name="floor_a">Floor</string>
    <string name="flat_a">Flat</string>

    <string name="project_name">Project Name</string>
    <string name="project_towards">Project Towards</string>
    <string name="installments">Installments</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="tx2541252525">TX2541252525</string>
    <string name="transaction_date">Transaction Date</string>
    <string name="transaction_time">Transaction Time</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="_200_kwd">200 KWD</string>
    <string name="replied_by">Replied By :</string>
    <string name="project_w">Project</string>
    <string name="building_w">Building</string>
    <string name="due_date">Due Date</string>
    <string name="expiry">Expiry</string>
    <string name="payment">Payments</string>
    <string name="support_timeout">Our office hours are saturdy to thursday:9am - 5pm. Saturday:9am - 1pm</string>
    <string name="datanotfound">Data not found.</string>
    <string name="create">Create</string>

</resources>
