<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_app_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/activity_share_back_Img"
            android:layout_width="@dimen/backbutton_height_width"
            android:layout_height="@dimen/backbutton_height_width"
            android:layout_margin="10dp"
            android:background="@drawable/back_button_selector" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/build_with_appmachine"
            android:textColor="@color/blue"
            android:textSize="@dimen/aboutus_title_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/share_build"
            android:textColor="@color/black"
            android:textSize="@dimen/default_text_size" />
    </LinearLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/btTwitter_ShareActivity"
        android:layout_width="@dimen/share_button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_selector"
        android:padding="@dimen/default_padding"
        android:text="@string/share_via_twitter"
        android:textColor="@color/white"
        android:textSize="@dimen/default_text_size" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/btFB_ShareActivity"
        android:layout_width="@dimen/share_button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_selector"
        android:padding="@dimen/default_padding"
        android:text="@string/share_via_facebook"
        android:textColor="@color/white"
        android:textSize="@dimen/default_text_size" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/btPlayStore_ShareActivity"
        android:layout_width="@dimen/share_button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_selector"
        android:padding="@dimen/default_padding"
        android:text="@string/rate_via_playstore"
        android:textColor="@color/white"
        android:textSize="@dimen/default_text_size" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/activity_share_mail_Btn"
        android:layout_width="@dimen/share_button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_selector"
        android:padding="@dimen/default_padding"
        android:text="@string/mail_in_link"
        android:textColor="@color/white"
        android:textSize="@dimen/default_text_size" />

</LinearLayout>