<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:id="@+id/layot_data"
    android:orientation="vertical">

    <RadioButton
        android:id="@+id/radio_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:gravity="center" />

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_btn"
        android:layout_margin="@dimen/_5sdp"
        android:background="@drawable/rounded_layout_on_login"
        android:orientation="vertical">

        <TextView
            android:id="@+id/projectNm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingLeft="@dimen/_7sdp"
            android:paddingRight="@dimen/_20sdp"
            android:text="@string/al_sedra"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp" />

        <TextView
            android:id="@+id/blockNm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingLeft="@dimen/_7sdp"
            android:paddingRight="@dimen/_20sdp"
            android:text="@string/block_a"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:gravity="left"
                android:paddingLeft="@dimen/_7sdp"
                android:text="@string/floor_a"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:id="@+id/FloorNm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="center"
                android:text="2"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="left"
                android:paddingLeft="@dimen/_7sdp"
                android:text="@string/flat_a"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:id="@+id/FlatNm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="center"
                android:text="@string/a"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>