<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/payonline_llMain"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:background="@drawable/header_bg"
        android:weightSum="1">

        <Button
            android:id="@+id/payOnline_btnBack"
            android:layout_width="@dimen/_65sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/btn_back"
            android:gravity="center"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp"
            android:text="@string/back"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="5dp"
            android:gravity="center"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:text="@string/pay_online"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/payOnline_logout"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:visibility="gone"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/logout"
            android:padding="@dimen/_50sdp" />

    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:scaleType="fitXY"
            android:src="@drawable/pay_online_main" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/payonlineinstuction"
            android:textColor="@color/transperant_black"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/enter_civil_id_phone_number"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtTxtCivilID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_20sdp"
                android:background="@drawable/edittxt_bg"
                android:gravity="center"
                android:inputType="number"
                android:maxLines="1"
                android:padding="@dimen/_2sdp" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="@drawable/pay_btn"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />
        </LinearLayout>
    </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>